# bible-api

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  csv.py  deploy.sh  dump.sh  format.sh  requirements.txt
.github/workflows/: build.yml
.sqlx/: query-0128f7f3a970e164d9edcaaab7c366aff00df1c4653b7bb25a8aa0e828463ee1.json  query-11e824bbdd38f855b46b71576374e3962dea255c6417aa3a9839c1122f661c36.json  query-15bdd7d8b8dba50166fc24769572b1168bac1c66ff8dde1bfa3e5387e1137bcd.json  query-1ad6e6bf93ff9e17bf8344b91ae51a4782716b466f5b7ccd4e51c76af7f8ee2d.json  query-273e6d6a903c8d361b9fa694257a02f1974c9673e2586c166ca24802f9d542a0.json  query-2fb331bf25550ed618fcebf0814832b0963e55a91d253a66878f1b5dedba5b9d.json  query-31e389b6dfd852ccd2b07f2686df99898d224bf71552a24ce0a6ed1f688ca388.json  query-4db0f1044d61495b45155e5e3ffe803f9684c5975451cac777397f5f2b42d912.json  query-5089c1ead6fbaeea6aded8026412dd6f0e72a162ad02c14bdb05ff63e50767dd.json  query-546283f478af9dd86a2b2c4885bf0c0d88d3b47b25e18ed2bee11c575d15e0c8.json  query-63182f9c4879bfa7bbf65b1b4158f9df31ed314ffd21a75e5babc232acb45dd7.json  query-6f75637db698c776d4dde3936b6836c5a25eb24e57efc3758a9385910b43ef25.json  query-7c830f85954353e52fd62b004603dfe0d9d416a07fcae19af73f796df40c3240.json  query-81d2fcfaebb205bcff8222b3bda87cdce5d01559fb1f60ccdfdbf8b9d550082f.json  query-a571c7d61f83a9b35843995bf56c86f3ddeadc9c5b9caf50cf43168f52ee6d8a.json  query-d671cccf55ca5d9d8b94130a757e3da79a50da6a391894b7ebe7461235f79886.json  query-e1aaed1bde4508db1dc701e1c82dabc7ae8d39f7077ff08a30427f162fadb8ec.json  query-f03ad9957cad96c8f3fde7e84345822c3459992e19d25f10019e3aac1714489a.json  query-f4215b10ae0ca37e50fd283aa6be9eb5491f7a2afc603228d5936659f2c9aa15.json
csv/: ASV.csv.zst  GOVBSI.csv.zst  KJV.csv.zst  MLSVP.csv.zst  OOVBSI.csv.zst  TOVBSI.csv.zst  WEB.csv.zst  WEBU.csv.zst  tovbsi.csv.zst
db/: db.dbml  mysql.sql  postgres.sql  postgresql.sql
migrations/: 0001_create_tables.sql  0002_testament_names.sql  0003_add_bible_name.sql  0004_make_abbr_not_null.sql  0005_make_testament_not_null.sql
sql/: .gitattributes  bible.sql  create_full_table.sql  latest_data_only.sql  latest_full.sql
src/: constants.rs  error.rs  main.rs  models.rs  query_params.rs  routes.rs  tests.rs
