[package]
name = "bible-parser"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread", "macros"] }
