[package]
name = "bible-api"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]
repository = "https://github.com/berinaniesh/bible-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["preserve_order"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros"] }
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread", "macros"] }
utoipa = { version = "4.0.0", features = ["actix_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
