[package]
name = "bible-api"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]
repository = "https://github.com/berinaniesh/bible-api"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "macros"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["fs", "rt-multi-thread", "macros"] }
utoipa = { version = "5.1.2", features = ["actix_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
